# secretary_gyuni

./: .gitignore  CLAUDE.md  Graph.py  Mcp_Tool.py  Node.py  README.md  State.py  main.py  mcp.config  pyproject.toml
UI/: main.py
app/chain/: __init__.py  food_recommand_chain.py  identity_chain.py  intent_classify_chain.py  intent_extract_chain.py  talk_chain.py
app/chain/prompt/: food_recommand_prompt.txt  identity_prompt.txt  intent_classify_prompt.txt  intent_extract_prompt.txt  talk_prompt.txt
app/logger/: logger.py  observability.py
logs/: app.jsonl
mcp_study_react.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
